@@ -1,4 +1,5 @@
  - fix foreachelse on arrayiterators https://github.com/smarty-php/smarty/issues/506
+ - fix errors that occured where isset was replaced with null check such as https://github.com/smarty-php/smarty/issues/453
 
 ===== 3.1.34 release ===== 05.11.2019
 13.01.2020
